Add 'create new pane in same dir' to tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,12 +3,6 @@ unbind C-b
 set -g prefix M-m
 bind -n M-m send-prefix
 
-# split panes using | and -
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
-
 # reload config file (change file location for your .tmux.conf)
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
@@ -36,3 +30,8 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 # Switching modes in vi-mode was too slow.
 # The default value is 500(milliseconds).
 set -sg escape-time 0
+
+# Create new panes in the same working directory
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -hc "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
