Change escape timeout

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,7 +29,9 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Switching modes in vi-mode was too slow.
 # The default value is 500(milliseconds).
-set -sg escape-time 0
+# Recommended to not use 0, because it can lead to strange problems. From:
+# https://devedge.github.io/2025/05/09/eliminating-esc-delays-in-tmux-vim-and-zsh/
+set -sg escape-time 5
 
 # Create new panes in the same working directory
 bind '"' split-window -c "#{pane_current_path}"
